...
                android:layout_height="391dp"
                android:scrollbars="vertical"
                tools:listitem="@layout/user_list_item"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/delete_group_btn"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="16dp"
                android:text="Delete group"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
...
