...
    <string name="lizenzinformationen">Lizenzinformationen</string>
    <string name="abmelden">Abmelden</string>
    <string name="profil_l_schen">Profil löschen</string>
    <string name="shared_pref_name">USER_DATA</string>
    <string name="user_id">uid</string>
    <string name="user_email">email</string>
    <string name="create_group">Create group</string>
    <string name="group_description">Group description</string>
    <string name="group_name">Group name</string>
    <string name="go_name">Go name</string>
    <string name="go_description">Go description</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
...
